[package]
name = "uncertain"
version = "0.2.0"
authors = ["Tilman Roeder"]
edition = "2018"
repository = "https://github.com/dyedgreen/uncertain"
license = "MIT"
description = "Fast and correct computations with uncertain values."
keywords = ["random", "statistics", "probability"]
categories = ["algorithms", "mathematics", "science", "simulation"]

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.0"

[dev-dependencies]
rand_distr = "0.4.0"
